--- a/svg-editor.css
+++ b/svg-editor.css
@@ -1,5 +1,6 @@
 ﻿body {
 	background: #535353;
+	overflow: hidden;
 }
 
 html, body, div{
@@ -10,11 +11,16 @@ html, body, div{
 	user-select: text;
 	/* this will work for QtWebKit in future */
 	-webkit-user-drag: text;
+	font-family: "Roboto", Verdana, Helvetica, Arial;
+	font-style: normal;
+	font-weight: 300;
 }
 
 #browser-not-supported {
 	font-size: 0.8em;
-	font-family: Verdana, Helvetica, Arial;
+	font-family: "Roboto", Verdana, Helvetica, Arial;
+	font-style: normal;
+	font-weight: 300;
 	color: #000000;
 }
 
@@ -27,7 +33,9 @@ html, body, div{
 
 #svg_editor {
 	font-size: 8pt;
-	font-family: Verdana, Helvetica, Arial;
+	font-family: "Roboto", Verdana, Helvetica, Arial;
+	font-style: normal;
+	font-weight:300;
 	color: #FFF;
 }
 
@@ -182,7 +190,6 @@ select {
 	border-style: solid;
 	border-width: 1px;
 	border-left: none;
-	overflow-x:hidden;
 	overflow-y:visible;
 }
 
@@ -207,19 +214,22 @@ select {
 #sidepanel_handle {
 	display: inline-block;
 	position: absolute;
-	background-color: #535353;
+	text-indent: -9999px;
+	background-color: #585858;
 	font-weight: bold;
-	left: 0;
-	top: 40%;
-	width: 1em;
-	padding: 5px 1px 5px 5px;
-	margin-left: 3px;
+	left: -21px;
+	height: 30px;
+	top: 16px;
+	width: 30px;
+	/* padding: 5px 1px 5px 5px; */
+	/* margin-left: 3px; */
 	cursor: pointer;
-	border-radius: 5px;
+	/* border-radius: 5px; */
 	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+	/* -webkit-border-radius: 5px; */
 	-moz-user-select: none;
-	-webkit-user-select: none;
+	/* -webkit-user-select: none; */
+	z-index: 1;
 }
 
 #sidepanel_handle:hover {
@@ -287,8 +297,9 @@ select {
 }
 
 #layerlist td.layervis {
-	width: 22px;
+	width: 30px;
 	cursor: pointer;
+	padding-left: 11px;
 }
 
 #layerlist td.layerinvis {
@@ -357,13 +368,7 @@ div.palette_item:first-child {
 	/*background: #eee !important;*/
 }
 
-#main_icon.buttondown {
-	background: #eee !important;
-	-moz-box-shadow: none !important;
-	-webkit-box-shadow: none !important;
-	box-shadow: none !important;
-	border-radius: 3px 3px 0 0;
-}
+
 
 #logo {
 	margin-top: -2px;
@@ -433,7 +438,7 @@ div.palette_item:first-child {
 }
 
 #main_menu li:hover {
-	background: #FFC;
+	background: #282828;
 }
 
 #main_menu li > div {
@@ -454,7 +459,7 @@ div.palette_item:first-child {
 .tool_button_current,
 .push_button_pressed
 {
-	background-color: #ffc !important;
+	/*background-color: #ffc !important;*/
 }
 
 .tool_button_current,
@@ -723,9 +728,8 @@ span.zoom_tool {
 
 .tool_sep {
 	width: 1px;
-	background: #888;
-	border-left: 1px outset #EEE;
-	margin: 2px 3px;
+	background: #000;
+	margin: 2px 10px;
 	padding: 0;
 	height: 24px;
 }
@@ -900,7 +904,7 @@ span.zoom_tool {
 }
 
 #toggle_stroke_tools:hover {
-	background: white;
+	background: #282828;
 }
 
 .color_tool {
@@ -1078,10 +1082,12 @@ ul li.current {
 	left: 30px;
 	right: 30px;
 	bottom: 30px;
-	background-color: #B0B0B0;
+	background-color: #383838;
 	opacity: 1.0;
 	text-align: center;
-	border: 1px outset #777;
+	border: 1px solid #000;
+	border-top-color: #6f6f6f;
+	border-left-color: #6f6f6f;
 	z-index: 6;
 }
 
@@ -1113,7 +1119,7 @@ ul li.current {
 	border: 1px outset #777;
 	opacity: 1.0;
 /*	width: 450px;*/
-	font-family: Verdana, Helvetica, sans-serif;
+	font-family: "Roboto", Verdana, Helvetica, sans-serif;
 	font-size: .8em;
 	z-index: 20001;
 }
@@ -1243,26 +1249,15 @@ ul li.current {
 }
 
 .toolbar_button button {
-	border:1px solid #dedede;
-	line-height:130%;
-	float: left;
-	background: #E8E8E8 none;
-	padding:5px 10px 5px 7px; /* Firefox */
-	line-height:17px; /* Safari */
-	margin: 5px 20px 0 0;
-	border: 1px #808080 solid;
-	border-top-color: #FFF;
-	border-left-color: #FFF;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+
+	margin-top:10px;
+	height:30px;
+	-webkit-apperance:none;
+
 }
 
 .toolbar_button button:hover {
-	border: 1px #e0a874 solid;
-	border-top-color: #fcd9ba;
-	border-left-color: #fcd9ba;
-	background-color: #FFC;
+
 }
 .toolbar_button button:active {
 	background-color: #F4E284;
@@ -1285,10 +1280,10 @@ ul li.current {
 #dialog_content {
 	height: 95px;
 	margin: 10px 10px 5px 10px;
-	background: #DDD;
+	background: #383838;
 	overflow: auto;
 	text-align: left;
-	border: 1px solid #B0B0B0;
+	color:#FFF;
 }
 
 #dialog_content.prompt {
@@ -1302,7 +1297,6 @@ ul li.current {
 
 #dialog_container {
 	position: absolute;
-	font-family: Verdana;
 	text-align: center;
 	left: 50%;
 	top: 50%;
@@ -1312,16 +1306,14 @@ ul li.current {
 	margin-top: -80px;
 	position: fixed;
 	z-index: 50001;
-	background: #CCC;
+	background: #383838;
 	border: 1px outset #777;
-	font-family:Verdana,Helvetica,sans-serif;
+	font-family:"Roboto",Verdana,Helvetica,sans-serif;
 	font-size:0.8em;
 }
 
 #dialog_container, #dialog_content {
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-	-webkit-border-radius: 5px;
+
 }
 
 #dialog_buttons input[type=text] {
@@ -1331,7 +1323,10 @@ ul li.current {
 }
 
 #dialog_buttons input[type=button] {
-	margin: 0 1em;
+	background-color: #888;
+	outline: 0px;
+	border: 0px;
+	padding: 6px;
 }
 
 /* Slider
@@ -1382,7 +1377,7 @@ ul li.current {
 	padding: 5px 0;
 	margin: 0px;
 	display: none;
-	font: 12px/15px Lucida Sans, Helvetica, Verdana, sans-serif;
+	font: 12px/15px "Roboto", Lucida Sans, Helvetica, Verdana, sans-serif;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-moz-box-shadow: 2px 5px 10px rgba(0,0,0,.3);
@@ -1457,3 +1452,74 @@ INPUT.spin-button
 	background-color: #000 !important;
 }
 
+#main_menu ul li div{ display: none }
+
+.jGraduate_gradPick .jGraduate_Form {
+	float: left;
+	width: 270px;
+	position: absolute;
+	left: 281px;
+	width: 266px;
+	height: 200px;
+	top: 167px;
+	margin: -3px 3px 0px 10px;
+	background-color: #E8E8E8;
+	color: #000;
+	z-index: 0;
+}
+
+.jPicker.Container {
+	color: #000;
+}
+
+.jPicker input[type=text]{
+	color:#000;
+}
+
+li.jGraduate_tab_current {
+	background-color: #EFEFEF !important;
+	display: inline;
+	padding: 3px;
+	margin: 2px;
+	border: none;
+	cursor: pointer;
+	color: #000;
+}
+
+.jPicker .Grid span.QuickColor {
+	border: 1px solid #000;
+}
+
+.AHex
+{
+	display: none;
+}
+
+.jGraduate_tabs li {
+	background-color: #282828;
+}
+
+.jGraduate_gradPick {
+	color: #000;
+}
+
+#layersLabel
+{
+	float: left;
+}
+#layer_moreopts
+{
+	float: right;
+	margin-right: 12px;
+	margin-top: 10px;
+}
+
+
+#tool_position
+{
+	margin-left:10px;
+}
+
+#marker_panel button{
+	display: none;
+}
