--- a/svg-editor.css
+++ b/svg-editor.css
@@ -131,12 +131,12 @@ select {
 
 #palette_holder {
 	overflow: hidden;
-	margin-top: 5px;
-	padding: 5px;
+	/* margin-top: 5px; */
+	padding: 13px;
 	position: absolute;
 	right: 15px;
 	height: 16px;
-	/*background: #f0f0f0;*/
+	background: #535353;
 	border-radius: 3px;
 	z-index: 2;
 }
@@ -185,11 +185,7 @@ select {
 	bottom: 40px;
 	right: 0;
 	width: 2px;
-	padding: 10px;
-	border-color: #808080;
-	border-style: solid;
-	border-width: 1px;
-	border-left: none;
+	padding: 0px 10px 10px 10px;
 	overflow-y:visible;
 }
 
@@ -215,21 +211,25 @@ select {
 	display: inline-block;
 	position: absolute;
 	text-indent: -9999px;
-	background-color: #585858;
+	background-color: #222;
 	font-weight: bold;
-	left: -21px;
+	left: -24px;
 	height: 30px;
-	top: 16px;
+	top: 31px;
 	width: 30px;
 	/* padding: 5px 1px 5px 5px; */
 	/* margin-left: 3px; */
 	cursor: pointer;
+	border-radius: 10px 0px 00px 10px;
 	/* border-radius: 5px; */
 	-moz-border-radius: 5px;
 	/* -webkit-border-radius: 5px; */
 	-moz-user-select: none;
 	/* -webkit-user-select: none; */
 	z-index: 1;
+	border-left: 3px solid #808080;
+	border-top: 2px solid #808080;
+	border-bottom: 2px solid #808080;
 }
 
 #sidepanel_handle:hover {
@@ -243,17 +243,19 @@ select {
 }
 #layerbuttons {
 	margin: 0;
-	padding: 0;
+	padding: 10px 0px 0px 0px;
 	width: 285px;
-	height: 20px;
+	height: 45px;
 	overflow: hidden;
 	border: 0px;
+
+
 }
 
 .layer_button {
 	width: 20px;
 	height: 20px;
-	padding: 1px;
+	padding: 5px;
 	cursor: pointer;
 	float: left;
 	margin-right: 3px;
@@ -430,7 +432,7 @@ div.palette_item:first-child {
 #main_menu li {
 /*	height: 35px;*/
 	line-height: 22px;
-	padding-top: 7px;
+	padding-bottom: 7px;
 	padding-left: 7px;
 	margin: -5px;
 	overflow: auto;
@@ -1244,9 +1246,6 @@ ul li.current {
 	margin-left: 0;
 }
 
-#tool_prefs_option {
-	float: right;
-}
 
 .toolbar_button button {
 
@@ -1503,15 +1502,17 @@ li.jGraduate_tab_current {
 	color: #000;
 }
 
-#layersLabel
+#layersLabel,#selLayerLabel
 {
 	float: left;
+	text-transform: uppercase;
+	font-size: 13px;
+	font-weight: bolder;
 }
 #layer_moreopts
 {
 	float: right;
 	margin-right: 12px;
-	margin-top: 10px;
 }
 
 
